# LaskaERP

./: .gitignore  build.ps1  info.txt
.claude/: settings.local.json
.github/workflows/: build.yml
backend/: .env  alembic.ini  database.py  main.py  requirements.txt  server.spec
backend/alembic/: env.py
backend/alembic/versions/: dc8965f5da50_init.py
backend/app/models/: __init__.py  warehouse.py
backend/app/routers/: warehouse.py
backend/app/schemas/: warehouse.py
backend/app/services/: warehouse.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: warehouse.js
frontend/src/components/warehouse/: MovementForm.jsx  MovementsTable.jsx  ProductList.jsx  StockTable.jsx  WarehouseList.jsx
frontend/src/contexts/: SyncContext.jsx
frontend/src/db/: index.js
frontend/src/pages/: WarehousePage.jsx
frontend/src/services/: syncManager.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
